# urlcoder

./: CMakeLists.txt  README.md
src/: urlcoder.cpp  urldecoder.h  urlencoder.h
windows/: urldecode.bat  urlencode.bat
